--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Assignment Solution for Module 2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Our Menu</h1>
